# pganalytics-v3

./: .env.example  .env.staging  .gitignore  .gitleaks.toml  .golangci.yml  .mise.toml  .pre-commit-config.yaml  .registration-secret  ACTION_PLAN_WEEK1.md  ADMIN_SYSTEM.md  ANALISE_COMPLETA_METRICAS_FUNCIONALIDADES.md  ANALISE_PROFUNDA_FUNCOES_ESTRATEGIA_LIDERANCA.md  ANALISE_VISUAL_FUNCIONALIDADES_REALISTA.md  ANALYSIS_COMPLETE_SUMMARY.md  ANALYSIS_DELIVERY_SUMMARY.txt  ANALYSIS_INDEX.md  ANALYSIS_README.md  API_ARCHITECTURE_EXPLANATION.md  API_TEST_REPORT.md  ARCHITECTURE_DIAGRAM.md  AUDIT_AND_OPTIMIZATION_INDEX.md  AUDIT_ARCHIVE_SUMMARY.md  AUDIT_DOCUMENTS_GUIDE.md  AUDIT_ISSUES_SUMMARY.txt  AUDIT_REPORT_INDEX.md  AUDIT_SUMMARY.md  AUDIT_SUMMARY.txt  BACKEND_MULTI_VERSION_VALIDATION.md  BACKEND_VALIDATION_INDEX.md  CLEANUP_SUMMARY.md  CODE_QUALITY_ANALYSIS.md  CODE_QUALITY_REPORT.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_FINDINGS.md  COLLECTOR_COMPARISON_ANALYSIS.md  COLLECTOR_ENHANCEMENT_PLAN.md  COLLECTOR_MANAGEMENT_DASHBOARD.md  COLLECTOR_POSTGRES_COMPATIBILITY.md  COLLECTOR_REGISTRATION_UI.md  COMPATIBILITY_SUMMARY.txt  (+263 more)
.claude/: settings.json
.planning/: MILESTONES.md  PROJECT.md  PROJECT_STATE.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
backend/: Dockerfile
collector/: BUILD_AND_DEPLOY.md  CMakeLists.txt  COLLECTOR_IMPLEMENTATION_NOTES.md  Dockerfile  QUICK_START.md  config.toml  config.toml.sample  docker-compose.multi-version-test.yml  entrypoint.sh  test_debug.cpp  vcpkg.json
collector/include/: auth.h  binary_protocol.h  bloat_plugin.h  cache_hit_plugin.h  collector.h  config_manager.h  connection_plugin.h  connection_pool.h  extension_plugin.h  host_inventory_plugin.h  lock_plugin.h  log_plugin.h  logical_replication_plugin.h  metrics_buffer.h  metrics_serializer.h  postgres_plugin.h  query_stats_plugin.h  replication_plugin.h  schema_plugin.h  sender.h  sysstat_plugin.h  thread_pool.h
collector/sql/: replication_queries.sql
collector/src/: auth.cpp  binary_protocol.cpp  bloat_plugin.cpp  cache_hit_plugin.cpp  collector.cpp  config_manager.cpp  connection_plugin.cpp  connection_pool.cpp  extension_plugin.cpp  host_inventory_plugin.cpp  lock_plugin.cpp  log_plugin.cpp  logical_replication_plugin.cpp  main.cpp  metrics_buffer.cpp  metrics_serializer.cpp  postgres_plugin.cpp  query_stats_plugin.cpp  replication_plugin.cpp  schema_plugin.cpp  sender.cpp  sysstat_plugin.cpp  thread_pool.cpp
collector/tests/: CMakeLists.txt  README.md  postgres_plugin_test.cpp  run_tests.sh
collector/tests/e2e/: 1_collector_registration_test.cpp  2_metrics_ingestion_test.cpp  3_configuration_test.cpp  4_dashboard_visibility_test.cpp  5_performance_test.cpp  6_failure_recovery_test.cpp  README.md  collector-config.toml  database_helper.cpp  database_helper.h  docker-compose.e2e.yml  e2e_harness.cpp  e2e_harness.h  fixtures.h  grafana_helper.cpp  grafana_helper.h  http_client.cpp  http_client.h  init-schema.sql  init-timescale.sql
collector/tests/integration/: README.md  auth_integration_test.cpp  collector_flow_test.cpp  config_integration_test.cpp  error_handling_test.cpp  fixtures.h  mock_backend_server.cpp  mock_backend_server.h  multi_version_support_test.cpp  regression_test.cpp  sender_integration_test.cpp
collector/tests/unit/: auth_test.cpp  config_manager_test.cpp  data_classification_test.cpp  host_metrics_test.cpp  metrics_buffer_test.cpp  metrics_serializer_test.cpp  replication_collector_test.cpp  sender_test.cpp
config/: collector.toml.example  config.toml.example
dashboards/: bloat-analysis.json  cache-performance.json  connection-tracking.json  extensions-config.json  lock-monitoring.json  schema-overview.json  system-overview.json
docs/: API_SECURITY_REFERENCE.md  ARCHITECTURE.md  CI_CD_PIPELINE.md  COLLECTOR_IMPLEMENTATION_COMPLETE.txt  COLLECTOR_IMPLEMENTATION_SUMMARY.md  COLLECTOR_REGISTRATION_GUIDE.md  DEFAULT_CREDENTIALS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STANDARDS.md  DOCUMENTATION_INDEX.md  ENTERPRISE_INSTALLATION.md  FAQ_AND_TROUBLESHOOTING.md  FRONTEND_REDESIGN_SPEC.md  FRONTEND_SECURITY_SCANNING.md  GETTING_STARTED.md  GITHUB_ACTIONS_SETUP.md  GRAFANA_DASHBOARD_SETUP.md  GRAFANA_REPLICATION_DASHBOARDS.md  HELM_VALUES_REFERENCE.md  INDEX.md  INTEGRATION.md  KUBERNETES_DEPLOYMENT.md  LOAD_TEST_EXECUTION.md  LOAD_TEST_PLAN.md  ONCALL_HANDBOOK.md  OPERATIONS_HA_DR.md  PHASE3_IMPLEMENTATION.md  PHASE3_REALTIME_IMPLEMENTATION.md  PHASE3_REALTIME_INTEGRATION_GUIDE.md  PHASE4_ADVANCED_UI_IMPLEMENTATION.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_STAGING_DEPLOYMENT.md  PHASE4_TESTING_RESULTS.md  PHASE_3_4_COMPLETION.md  PHASE_3_5_A_COMPLETION.md  POSTGRES_VERSIONS.md  QUICKSTART_CREDENTIALS.md  REPLICATION_COLLECTOR_GUIDE.md  (+5 more)
frontend/: .env.production  .gitignore  .npmrc.example  Dockerfile  E2E_TEST_REPORT.md  PHASE1_IMPLEMENTATION.md  README.md  UI_STRUCTURE.md  e2e-simple-tests.mjs  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  proxy.js  tailwind.config.js  test-compare-pages.mjs  test-console-errors.mjs  test-final-check.mjs  test-index-advisor-v2.mjs  test-index-advisor.mjs  test-pages-simple.mjs  test-query-perf-detailed.mjs  test-query-perf.mjs  test-sidebar-check.mjs  test-ui-issues.mjs  test-users-detailed-check.mjs  test-users-detailed.mjs  test-users-route.mjs  test-vacuum-advisor-sidebar.mjs  test-vacuum-debug.mjs  test-vacuum-errors.mjs  test-with-devtools.mjs  test-with-hard-refresh.mjs  vite.config.ts
ml-service/: .gitignore  Dockerfile  README.md  app.py  celery_worker.py  config.py  docker-compose.yml  requirements.txt  tasks.py
monitoring/: WEBHOOK_RECEIVERS_DEPLOYMENT.md  automation_engine.py  grafana-alerts.json  incident_correlation_engine.py  notification-channels.json  prometheus.staging.yml  test_notification_channels.sh  webhook_incident_receiver.py  webhook_jira_receiver.py
phase5_reports/: INDEX.md  PHASE5_EXECUTIVE_SUMMARY.md  PHASE5_FINAL_DEPLOYMENT_REPORT.md  phase5_feature_validation.md  phase5_performance_analysis.md  (+3 more)
(+1507 files in other folders)
